# Multi-Program-during-learn-C-primer

./: README.md
ATM/: CMakeLists.txt  TemplateDispatcher.h  atm.h  bank_machine.h  dispatcher.h  interface_machine.h  main.cpp  message.h  queue.h  receiver.h  sender.h
ATM/Resource/: ATM logical 状态机-2025-05-13-0601.excalidraw
Animal/: AnimalAdapter.cpp  AnimalAdapter.h  AnimalFactory.h  Animals.h  CMakeLists.txt  Cat.cpp  Cat.h  Dog.cpp  Dog.h  IAnimalUser.h  Test.h  main.cpp
ChatServer/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  Logger.cpp  Logger.h  Server.cpp  Server.h  Session.cpp  Session.h  ThreadSafeQueue.h  main.cpp
ChatServer/Resource/: .$整体架构.drawio.bkp  .$流程图.drawio.bkp  DemandAnalysis.md  整体架构.drawio  流程图.drawio  流程图.md
ConcurrentLogger/: CMakeLists.txt  LogLevel.h  LogMessage.h  Logger.cpp  Logger.h  ThreadSafeQueue.h  main.cpp
ConcurrentLogger/Resource/: 流程图.md
DataStructure/: AdjacencyList.h  CMakeLists.txt  CircularLinkedList.h  DoubleLinkedList.h  LinkedQueue.h  LinkedStack.h  PracticeOfStack.h  SequenceQueue.h  SequenceStack.h  SinglyLinkedList.h  String.h  main.cpp  test.h
KnowledgeTest/: Account.cpp  Account.h  Associative_Container.h  Basket.cpp  Basket.h  Blob.cpp  Blob.h  BlobPtr.cpp  BlobPtr.h  Bulk_quote.cpp  Bulk_quote.h  CMakeLists.txt  ContainerPractice.h  CopyControl.h  Date.cpp  Date.h  Debug.h  DebugDelete.h  Delete.h  Disc_quote.cpp  Disc_quote.h  DynamicMemory.h  Excess_quote.cpp  Excess_quote.h  Folder.cpp  Folder.h  GenericAlgorithm.h  HasPtr.cpp  HasPtr.h  Message.cpp  Message.h  ObjectOriented.h  OverloadOperator.h  Person.cpp  Person.h  QueryResult.cpp  QueryResult.h  Quote.cpp  Quote.h  Sale_data.cpp  (+26 more)
KnowledgeTest/Resource/: destination.txt  even.txt  example.txt  letter.txt  modified.txt  odd.txt
MessageSend/: CMakeLists.txt  EmailSender.cpp  EmailSender.h  IMessageSender.h  NotificationService.cpp  NotificationService.h  SmsSender.cpp  SmsSender.h  Test.h
MultithreadingPractice/: Accumulate.h  CMakeLists.txt  Parallel_merge_sort.h  Quick_sort.h  Scoped_Thread.h  TaskQueue.cpp  TaskQueue.h  ThreadBasics.h  ThreadSafe_Stack.cpp  ThreadSafe_Stack.h  hierarchical_mutex.h  main.cpp  threadsafe_queue.cpp  threadsafe_queue.h
Query_Test/: AndQuery.cpp  AndQuery.h  BinaryQuery.h  CMakeLists.txt  NotQuery.cpp  NotQuery.h  OrQuery.cpp  OrQuery.h  Query.cpp  Query.h  QueryResult.cpp  QueryResult.h  QueryTest.h  Query_base.h  TextQuery.cpp  TextQuery.h  WordQuery.cpp  WordQuery.h  main.cpp
Query_Test/Resource/: letter.txt
SimpleConcurrentWebCrawler/: CMakeLists.txt  CrawlerController.cpp  CrawlerController.h  Fetcher.cpp  Fetcher.h  Parser.cpp  Parser.h  ThreadPool.h  UrlDepth.h  main.cpp  queue.h
ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h  main.cpp
leetcode/: 1_twoSum.h  283_moveZeroes.h  CMakeLists.txt  main.cpp
