cmake_minimum_required(VERSION 3.27)
project(KnowledgeTest)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(KnowledgeTest main.cpp
        fileOperate.h
        Sale_data.h
        Sale_data.cpp
        Person.cpp
        Person.h
        Sale_processing.cpp
        window_mgr.h
        Screen.h
        Screen.cpp
        window_mgr.cpp
        Screen_mgr.h
        Debug.h
        Account.cpp
        Account.h
        Date.cpp
        Date.h
        ContainerPractice.h
        GenericAlgorithm.h
        Associative_Container.h
        strBlob.cpp
        strBlob.h
        DynamicMemory.h
        strBlobPtr.cpp
        strBlobPtr.h
        TextQuery.cpp
        TextQuery.h
        QueryResult.cpp
        QueryResult.h
        CopyControl.h
        HasPtr.cpp
        HasPtr.h
        Message.cpp
        Message.h
        Folder.cpp
        Folder.h
        StrVec.cpp
        StrVec.h
        String.cpp
        String.h
        OverloadOperator.h
        Quote.cpp
        Quote.h
        ObjectOriented.h
        Bulk_quote.cpp
        Bulk_quote.h
        Excess_quote.cpp
        Excess_quote.h
        Disc_quote.cpp
        Disc_quote.h
        Basket.cpp
        Basket.h
        TemplatePrograming.h
        Blob.cpp
        Blob.h
        BlobPtr.cpp
        BlobPtr.h
        Vec.cpp
        Vec.h
        DebugDelete.h
        SharedPointer.cpp
        SharedPointer.h
        Delete.h
        UniquePointer.cpp
        UniquePointer.h)
